--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="https://i.ibb.co/HTyGwGhP/TUMSIN-FONDO-1024-X1024.png">
-    <title>Verificador de Agendamientos en linea - TeEchoUnaMano TUM</title>
+    <title>Verificador de Agendamientos en linea - TUM</title>
     
     <!-- Google Fonts: Inter para look Apple / Profesional -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -606,7 +606,7 @@
                 <div class="logo">
                     <img src="https://i.ibb.co/HTyGwGhP/TUMSIN-FONDO-1024-X1024.png" alt="TUM Logo" class="logo-img">
                     <div class="logo-text">
-                        <h1>TeEchoUnaMano TUM</h1>
+                        <h1>TUM</h1>
                         <p>Sistema de Verificación</p>
                     </div>
                 </div>
@@ -998,3 +998,4 @@
     </script>
 </body>
 </html>
+
