--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@
     <!-- Hero Section -->
     <div class="hero-section" id="heroSection">
         <div class="container">
-            <h1>Consulta tu Servicio</h1>
-            <p class="subtitle">Ingresa tu código de cliente para ver el estado de tus agendamientos</p>
+            <h1>Mi Agenda</h1>
+            <p class="subtitle">Ingresa tu código para ver el estado de tus agendamientos</p>
             
             <!-- Search Box -->
             <div class="search-box-wrapper">
@@ -998,4 +998,5 @@
     </script>
 </body>
 </html>
+
 
