--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 <div class="logo">
                     <img src="https://i.ibb.co/C35nRshT/TUM-CEO-verde-fluo-S-F-500x500.png" alt="TUM Logo" class="logo-img">
                     <div class="logo-text">
-                        <h1> TUM </h1>
+                        <h1> TeEchoUnaMano </h1>
                         <!--<p>Sistema de Verificación</p>-->
                     </div>
                 </div>
@@ -998,6 +998,7 @@
     </script>
 </body>
 </html>
+
 
 
 
